@@ -4,6 +4,8 @@
     http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=21286).
   * Fix cast to pointer from integer of different size (reference
     http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=21286).
+  * Fix broken MSL profile tag (reference
+    http://www.imagemagick.org/discourse-server/viewforum.php?f=9).
 
 2012-06-24  6.7.7-9 Cristy  <quetzlzacatenango@image...>
   * New version 6.7.7-9, SVN revision 8460.
